--- a/src/main/java/com/blackflower/curriculumcreator/MainFrame.form
+++ b/src/main/java/com/blackflower/curriculumcreator/MainFrame.form
@@ -46,7 +46,7 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" attributes="0">
               <Component id="headerPanel" min="-2" max="-2" attributes="0"/>
-              <EmptySpace min="0" pref="0" max="-2" attributes="0"/>
+              <EmptySpace max="-2" attributes="0"/>
               <Component id="mainPanel" max="32767" attributes="0"/>
           </Group>
           <Component id="sideMenuPanel" max="32767" attributes="0"/>
